# gps_service_api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/core/: settings.py  urls.py
src/employees/: models.py  serializers.py  urls.py  views.py
src/employees/migrations/: 0001_initial.py
src/location_history/: apps.py
src/locations_history/: apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
src/locations_history/migrations/: 0001_initial.py  0002_auto_20200322_1028.py  0003_auto_20200322_1029.py  0004_auto_20200322_1815.py
